<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2022 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingTop="@dimen/dialog_content_area_padding_top"
android:paddingStart="@dimen/dialog_content_area_padding"
android:paddingEnd="@dimen/dialog_content_area_padding"
android:paddingBottom="@dimen/dialog_content_area_padding_top">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_new_look_paintroid"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/add_look_draw_new_image"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_draw_image" />

            <TextView
                android:id="@+id/dialog_new_look_media_library"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/add_look_media_library"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_media_library_look" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_new_look_gallery"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/add_look_choose_image"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_gallery" />

            <TextView
                android:id="@+id/dialog_new_look_object_library"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/add_look_object_library"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_apps_white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

             <TextView
                 android:id="@+id/dialog_new_look_camera"
                 android:background="@drawable/new_object_dialog_selector"
                 android:gravity="center"
                 android:text="@string/add_look_from_camera"
                 android:textSize="?attr/medium"
                 app:drawableTopCompat="@drawable/ic_camera" />

            <TextView
                android:id="@+id/dialog_new_look_backpack"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/backpack"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_content_paste" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
             <TextView
                 android:id="@+id/dialog_new_look_from_local"
                 android:background="@drawable/new_object_dialog_selector"
                 android:gravity="center"
                 android:text="@string/add_look_from_local_project"
                 android:textSize="?attr/medium"
                 app:drawableTopCompat="@drawable/ic_library_add" />
        </TableRow>
    </TableLayout>
</ScrollView>
