...
  -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_undo"
        android:visible="false"/>

    <item
...
