...
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_down"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/img_margin"/>

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/view_holder_item_title"
            android:textSize="?attr/large"/>

...
