...
    <string name="fragment_sprite_text_description">Tap \"+\" to add actors or objects</string>
    <string name="default_sprite_name">My actor or object</string>
    <!--  -->

    <!-- LookListFragment -->
    <string name="fragment_look_text_description">Tap \"+\" to add looks</string>
    <string name="select_look_from_gallery">Select image</string>
    <string name="select_look_from_camera">Select photo</string>
    <!--  -->

    <!-- SoundListFragment -->
    <string name="fragment_sound_text_description">Tap \"+\" to add sounds</string>
    <string name="sound_select_source">Select a sound</string>
...
    <string name="new_data_for_this_sprite_only">For this actor, object, or one of its clones only</string>
    <string name="new_data_for_connected_devices">For all actors, objects, and clones in all scenes of projects
        on connected multiplayer devices</string>


    <!-- Backpack -->
    <string name="backpack_title">Your backpack</string>
    <string name="pack">Pack</string>
    <string name="unpack">Unpack</string>
    <!--  -->

    <!-- NewProjectDialog -->
    <string name="new_project_dialog_example_project">Example project</string>
...
    <!-- NewMergedProjectDialog -->
    <string name="new_merge_project_dialog_title">Merged project</string>
    <string name="merging_project_text">These two projects cannot yet be merged</string>
    <!--  -->

    <!-- NewSpriteDialog -->
    <string name="new_sprite_dialog_title">New actor or object</string>
    <!--  -->

    <!-- NewLookDialog -->
    <string name="new_look_dialog_title">Add look</string>
    <string name="add_look_from_camera">Camera</string>
    <string name="add_look_object_library">Library</string>
    <string name="add_look_draw_new_image">Draw</string>
    <string name="add_look_choose_image">Gallery</string>
    <string name="add_look_media_library">Looks</string>
    <string name="add_look_from_local_project">Local projects</string>
...
